@@ -39,6 +39,7 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.StringTokenizer;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import java.util.stream.Collectors;
@@ -55,7 +56,6 @@ import javax.swing.JSpinner;
 import javax.swing.RowSorter;
 import javax.swing.SortOrder;
 import javax.swing.SpinnerNumberModel;
-import static javax.swing.WindowConstants.DISPOSE_ON_CLOSE;
 import javax.swing.filechooser.FileNameExtensionFilter;
 import javax.swing.table.DefaultTableModel;
 
@@ -3044,13 +3044,28 @@ public class SettingsDialog extends javax.swing.JDialog {
 
     private void run_command_test_buttonActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_run_command_test_buttonActionPerformed
         // TODO add your handling code here:
-
         if (run_command_textbox.getText() != null && !"".equals(run_command_textbox.getText().trim())) {
-
             try {
-                Runtime.getRuntime().exec(run_command_textbox.getText().trim());
-            } catch (IOException ex) {
-                Logger.getLogger(MiscTools.class.getName()).log(Level.SEVERE, ex.getMessage());
+                StringTokenizer st = new StringTokenizer(run_command_textbox.getText().trim());
+                String[] cmdarray = new String[st.countTokens()];
+                for (int i = 0; st.hasMoreTokens(); i++)
+                    cmdarray[i] = st.nextToken();
+
+                ProcessBuilder pb;
+                if (debug_file_checkbox != null && debug_file_checkbox.isSelected()) {
+                    File externalCmdLog = new File(MainPanel.MEGABASTERD_HOME_DIR + "/MEGABASTERD_EXTERNAL_CMD.log");
+                    pb = new ProcessBuilder(cmdarray)
+                            .redirectOutput(ProcessBuilder.Redirect.appendTo(externalCmdLog))
+                            .redirectError(ProcessBuilder.Redirect.appendTo(externalCmdLog));
+                } else {
+                    pb = new ProcessBuilder(cmdarray);
+                }
+                Process pr = pb.start();
+
+                pr.waitFor();
+                pr.destroy();
+            } catch (IOException | InterruptedException ex) {
+                LOG.log(Level.SEVERE, ex.getMessage());
                 JOptionPane.showMessageDialog(this, ex.getMessage(), "Error", JOptionPane.ERROR_MESSAGE);
             }
         }
